[gd_scene load_steps=17 format=3 uid="uid://cuvffoq4tpsq5"]

[ext_resource type="Script" path="res://scripts/enemies/evil_player_boss.gd" id="1_03jhk"]
[ext_resource type="PackedScene" uid="uid://bbwxu4gbrq8ts" path="res://animations/Player/animation_evil_player.tscn" id="1_u6py0"]
[ext_resource type="PackedScene" uid="uid://cikwsnyq8tae4" path="res://entities/weapons/sword_weapon.tscn" id="2_oddgn"]
[ext_resource type="AudioStream" uid="uid://cd7exvtm5i8wx" path="res://sounds/sfx/dash.ogg" id="2_prml1"]
[ext_resource type="Texture2D" uid="uid://doprxr0foti3h" path="res://images/sprites/global/shadow.png" id="2_pyqme"]
[ext_resource type="AudioStream" uid="uid://bicc0xwxnn0dj" path="res://sounds/sfx/taking_damage.ogg" id="3_i323c"]
[ext_resource type="PackedScene" uid="uid://dsat1l6vac73t" path="res://entities/weapons/spear_weapon.tscn" id="3_jcnur"]
[ext_resource type="AudioStream" uid="uid://da3rhgcvebbks" path="res://sounds/sfx/sword.ogg" id="4_j87d1"]
[ext_resource type="PackedScene" uid="uid://dgs41160g0fv1" path="res://entities/weapons/scisor_weapon.tscn" id="4_skj3n"]
[ext_resource type="PackedScene" uid="uid://c0qmpy1n3jdmb" path="res://entities/weapons/axe_weapon.tscn" id="5_y65rl"]
[ext_resource type="PackedScene" uid="uid://by2o1gkwxgkw1" path="res://entities/ui/health_boss.tscn" id="11_qf2ex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7w6bm"]
radius = 32.0624

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ad0f2"]
radius = 36.0
height = 132.0

[sub_resource type="Curve" id="Curve_4qyh7"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.553073, 74.0618), 0.0, 0.0, 0, 0, Vector2(1, 8.59857), 217.638, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_l6o3s"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.324022, 1), 0.0, 0.0, 0, 0, Vector2(0.99162, 0.623278), -1.06799, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ere10"]
offsets = PackedFloat32Array(0, 0.293333, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.873333, 1, 1, 1, 0)

[node name="EvilPlayerBoss" type="CharacterBody2D" node_paths=PackedStringArray("possible_weapons")]
y_sort_enabled = true
collision_layer = 4
motion_mode = 1
script = ExtResource("1_03jhk")
possible_weapons = [NodePath("SwordWeapon"), NodePath("SpearWeapon"), NodePath("ScisorWeapon"), NodePath("AxeWeapon")]
dash_sfx = ExtResource("2_prml1")
damage_sfx = ExtResource("3_i323c")
attack_sfx = ExtResource("4_j87d1")
health = 60

[node name="SwordWeapon" parent="." instance=ExtResource("2_oddgn")]
position = Vector2(0, -67)

[node name="SpearWeapon" parent="." instance=ExtResource("3_jcnur")]
position = Vector2(0, -68)

[node name="ScisorWeapon" parent="." instance=ExtResource("4_skj3n")]
position = Vector2(0, -67)

[node name="AxeWeapon" parent="." instance=ExtResource("5_y65rl")]
position = Vector2(0, -69)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_7w6bm")

[node name="BodyContainer" type="Node2D" parent="."]

[node name="PlayerAnimation" parent="BodyContainer" instance=ExtResource("1_u6py0")]
position = Vector2(8, -47)

[node name="Shadow" type="Sprite2D" parent="BodyContainer"]
modulate = Color(0, 0, 0, 0.392157)
z_index = -1
scale = Vector2(0.3, 0.126667)
texture = ExtResource("2_pyqme")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -68)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
z_index = 1
shape = SubResource("CapsuleShape2D_ad0f2")
debug_color = Color(1, 1, 0, 0.419608)

[node name="DamageParticle" type="CPUParticles2D" parent="."]
z_index = 100
position = Vector2(-2.08165e-12, -58)
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
randomness = 0.49
lifetime_randomness = 0.86
texture = ExtResource("2_pyqme")
emission_shape = 1
emission_sphere_radius = 50.0
spread = 20.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 1000.0
initial_velocity_max = 1200.0
damping_min = 1000.0
damping_max = 1500.0
damping_curve = SubResource("Curve_4qyh7")
scale_amount_min = 0.03
scale_amount_max = 0.06
scale_amount_curve = SubResource("Curve_l6o3s")
color_ramp = SubResource("Gradient_ere10")

[node name="HealthBoss" parent="." instance=ExtResource("11_qf2ex")]
